--- a/login.html
+++ b/login.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="resources/style.css">
+    <link rel="stylesheet" href="resources/login.css">
+</head>
+
+<body>
+
+    <div>
+        <h1>Welcome to postIt!</h1>
+        <h2><a href="index.html">Create an Account</a></h2>
+        <h2>Or</h2>
+        <h2>Please Log In</h2>
+
+        <form action="">
+            <input type="text" name="Email" id="eamilInput">
+            <input type="password" name="Password" id="passwordInput">
+            <button type="submit">Log In</button>
+        </form>
+        <h2><a href="index.html">Forgot password?</a></h2>
+    </div>
+
+</body>
+
+</html>
