--- a/Homework1/login.html
+++ b/Homework1/login.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login | postIt</title>
 
     <link rel="stylesheet" href="resources/style.css">
     <link rel="stylesheet" href="resources/login.css">
-</head>
+  </head>
 
-<body>
+  <body>
 
-    <div>
-        <h1>Welcome to postIt!</h1>
-        <h2><a href="index.html">Create an Account</a></h2>
-        <h2>Or</h2>
-        <h2>Please Log In</h2>
+    <div id="login-container">
+      <h1>Welcome to postIt!</h1>
+      <p><a href="index.html">Create an Account</a></p>
+      <p>Or</p>
+      <p>Please Log In</p>
 
-        <form action="">
-            <input type="text" name="Email" id="eamilInput">
-            <input type="password" name="Password" id="passwordInput">
-            <button type="submit">Log In</button>
-        </form>
-        <h2><a href="index.html">Forgot password?</a></h2>
+      <form method="get" id="login-form" onsubmit="window.location.href = 'index.html'; return false;">
+        <input type="text" name="Email" id="emailInput" placeholder="Email" class="input-field">
+        <input type="password" name="Password" id="passwordInput" placeholder="Password" class="input-field">
+        <button type="submit" id="submit-button">Log In</button>
+      </form>
+      <p><a href="index.html">Forgot password?</a></p>
     </div>
 
-</body>
+  </body>
 
 </html>
