--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -20,7 +20,9 @@
         <input type="text" name="searchTerm" id="searchTerm" value="" placeholder="search...">
         <button>Search</button>
       </div>
-      <img class="profile_pic" src="https://miro.medium.com/max/256/0*vuQRIjTuwmZ7r6em.jpg" alt="profile_pic">
+      <a href="login.html" id="account-circle">
+        <img class="profile_pic" src="https://miro.medium.com/max/256/0*vuQRIjTuwmZ7r6em.jpg" alt="profile_pic">
+      </a>
     </nav>
 
     <div class="container">
