profiilile vajutamise funk

--- a/Homework2/index.html
+++ b/Homework2/index.html
@@ -22,9 +22,9 @@
         <input type="text" name="searchTerm" id="searchTerm" value="" placeholder="search...">
         <button>Search</button>
       </div>
-      <a href="login.html" id="account-circle">
+      <div id="account-circle" class="account-circle">
         <img class="profile_pic" src="https://miro.medium.com/max/256/0*vuQRIjTuwmZ7r6em.jpg" alt="profile_pic">
-      </a>
+      </div>
     </nav>
 
     <div class="container">
